# LurMotorn

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  ISSUES.md  README.md  build.ps1
Games/Chess/: CMakeLists.txt
Games/Chess/Android/: README.md  build.gradle.kts  settings.gradle.kts
Games/Chess/Android/app/: build.gradle.kts
Games/Chess/Android/app/src/main/: AndroidManifest.xml
Games/Chess/Android/app/src/main/cpp/: AndroidAudioDevice.cpp  AndroidBleTransport.cpp  AndroidMain.cpp  AndroidVulkanSurface.cpp  CMakeLists.txt  (+1 more)
Games/Chess/Android/gradle/wrapper/: gradle-wrapper.properties
Games/Chess/Content/Pieces/: NOTICE.md
Games/Chess/Core/Private/: Bitboard.h  Board.cpp  ChessMatchState.cpp  ChessRecord.cpp  MatchMeta.cpp  MoveCodec.cpp  MoveGen.cpp  OpponentRegistry.cpp
Games/Chess/Core/Public/Chess/: Board.h  ChessMatchState.h  ChessRecord.h  MatchMeta.h  MoveCodec.h  OpponentRegistry.h  Types.h
Games/Chess/Core/Tests/: CMakeLists.txt  ChessRulesTests.cpp  ChessStateTests.cpp  FuzzTests.cpp
Games/Chess/Desktop/: CMakeLists.txt  DesktopMain.cpp  WindowsBleTransport.cpp  WindowsBleTransport.h
Games/Chess/View/Private/: BoardView.cpp  PieceMasks.h  SfxClips.h  SfxLibrary.cpp
Games/Chess/View/Public/Chess/View/: BoardView.h  SfxLibrary.h
Games/Chess/iOS/: CMakeLists.txt  Info.plist.in  README.md
Games/Chess/iOS/Sources/: AppMain.mm  IosAudioDevice.mm  IosBleTransport.mm  IosVulkanSurface.mm
Games/RocksPapersScissors/: CMakeLists.txt
Games/RocksPapersScissors/Android/: README.md  gradle.properties  settings.gradle.kts
Games/RocksPapersScissors/Android/app/: build.gradle.kts
Games/RocksPapersScissors/Android/app/src/main/: AndroidManifest.xml
Games/RocksPapersScissors/Core/Private/: AiController.cpp  Sim.cpp
Games/RocksPapersScissors/Core/Public/Rps/: AiController.h  Sim.h  Tunables.h
Games/RocksPapersScissors/Core/Tests/: AiTests.cpp  CMakeLists.txt  SimTests.cpp
Games/RocksPapersScissors/Desktop/: CMakeLists.txt  DesktopMain.cpp  WindowsBleTransport.cpp  WindowsBleTransport.h
Games/RocksPapersScissors/Net/Private/: LockstepPeer.cpp
Games/RocksPapersScissors/Net/Public/Rps/: EventCodec.h  LockstepPeer.h
Games/RocksPapersScissors/Net/Tests/: CMakeLists.txt  NetTests.cpp
Games/RocksPapersScissors/Runtime/Private/: SimRunner.cpp
Games/RocksPapersScissors/Runtime/Public/Rps/: SimRunner.h  Snapshot.h
Games/RocksPapersScissors/Runtime/Tests/: CMakeLists.txt  RunnerTests.cpp
Games/RocksPapersScissors/View/Private/: GameView.cpp  IconMasks.h
Games/RocksPapersScissors/View/Public/Rps/: CameraScroll.h  GameView.h
Games/RocksPapersScissors/iOS/: CMakeLists.txt  Info.plist.in
Games/RocksPapersScissors/iOS/Sources/: IosBleTransport.mm  IosVulkanSurface.mm  RpsMain.mm
Modules/Audio/: CMakeLists.txt
Modules/Audio/Private/: Mixer.cpp  PcmCodec.cpp
Modules/Audio/Public/Lur/Audio/: AudioDevice.h  IAudioDevice.h  Mixer.h  PcmCodec.h  Sound.h
Modules/Audio/Tests/: AudioTests.cpp  CMakeLists.txt
Modules/Core/: CMakeLists.txt
Modules/Core/Public/Lur/Core/: Assert.h  CVar.h  CVarConfig.h  DevCommand.h  FlightRecorder.h  FromString.h  Hash.h  Log.h
Modules/Core/Tests/: CMakeLists.txt  CVarZeroOverheadProbe.cpp  CoreTests.cpp
Modules/DevConsole/: CMakeLists.txt
Modules/DevConsole/Public/Lur/DevConsole/: ConsoleModel.h
Modules/DevConsole/Tests/: CMakeLists.txt  DevConsoleTests.cpp
Modules/DevGui/: CMakeLists.txt
Modules/DevGui/Public/Lur/DevGui/: CategoryTree.h  Numpad.h  Popover.h
Modules/DevGui/Tests/: CMakeLists.txt  DevGuiTests.cpp
Modules/Hud/: CMakeLists.txt
Modules/Hud/Private/: DebugOverlay.cpp  Dropdown.cpp  LinkStatusBar.cpp  TextField.cpp
Modules/Hud/Public/Lur/Hud/: DebugOverlay.h  Dropdown.h  LinkStatusBar.h  TextField.h
Modules/Math/: CMakeLists.txt
Modules/Math/Public/Lur/Math/: Mat4.h  Quat.h  Vec.h
Modules/Net/: CMakeLists.txt
Modules/Net/Private/: Session.cpp
Modules/Net/Public/Lur/Net/: ClockSync.h  Session.h
Modules/Net/Tests/: CMakeLists.txt  NetTests.cpp
Modules/Pairing/: CMakeLists.txt
Modules/Pairing/Public/Lur/Pairing/: Pairing.h
Modules/Platform/: CMakeLists.txt
Modules/Platform/Private/Windows/: Win32Window.cpp
Modules/Platform/Public/Lur/Platform/: Window.h
Modules/Render/: CMakeLists.txt
Modules/Render/Platform/Windows/: VulkanSurface.cpp
Modules/Render/Private/Vulkan/: VulkanBackend.cpp
Modules/Render/Private/Vulkan/Shaders/: Instanced.frag  Instanced.frag.inc  Instanced.vert  Instanced.vert.inc  Sprite.frag  Sprite.frag.inc  Text.frag  Text.frag.inc  Text.vert  Text.vert.inc
Modules/Render/Public/Lur/Render/: DevGuiLayer.h  Renderer.h  Sprite2D.h
Modules/Render/Public/Lur/Render/Vulkan/: PlatformSurface.h  VulkanRenderer.h
Modules/Save/: CMakeLists.txt
Modules/Save/Private/: DeviceId.cpp  Store.cpp
Modules/Save/Public/Lur/Save/: DeviceId.h  SaveState.h  Store.h  SyncManager.h
Modules/Save/Tests/: CMakeLists.txt  SaveTests.cpp
Modules/Serialization/: CMakeLists.txt
Modules/Serialization/Private/: BitReader.cpp  BitWriter.cpp
Modules/Serialization/Public/Lur/Serialization/: BitReader.h  BitWriter.h  Varint.h
Modules/Serialization/Tests/: BitstreamTests.cpp  CMakeLists.txt
Modules/Sim/: CMakeLists.txt
Modules/Sim/Public/Lur/Sim/: Fixed.h  FixedString.h  Random.h  Tick.h
Modules/Sim/Tests/: CMakeLists.txt  SimTests.cpp
Modules/Text/: CMakeLists.txt
Modules/Text/Private/: BuiltinFonts.cpp  Font.cpp  FontRegistry.cpp  TextLayout.cpp
Modules/Text/Private/Cooked/: FontAtlas_Dseg7.h  FontAtlas_Inter.h
Modules/Text/Public/Lur/Text/: BuiltinFonts.h  CookedFont.h  Font.h  FontRegistry.h  TextLayout.h
Modules/Text/Tests/: CMakeLists.txt  FontTests.cpp
Modules/Trace/: CMakeLists.txt
Modules/Trace/Private/: Trace.cpp
Modules/Trace/Public/Lur/Trace/: Trace.h
Modules/Trace/Tests/: CMakeLists.txt  TraceTests.cpp
Modules/Transport/: CMakeLists.txt
Modules/Transport/Public/Lur/Transport/: Ble.h  BleProtocol.h  EventInbox.h  Loopback.h  Transport.h
Modules/Transport/Tests/: CMakeLists.txt  TransportTests.cpp
(+106 files in other folders)
